# google-cloud

./: .gitignore  DEMO.md  LICENSE  README.md  SETUP_ISSUES.md  deploy.sh  fuzzy_match.sql  gemini_remote_function_execution.sql  main.py  pipeline.env.example  requirements.txt  setup.sh
biglake-iceberg-pipeline/services/data-cleaning-agent/: .env.example  .gitignore  CLAUDE.md  Dockerfile  ROADMAP.md  pyproject.toml
biglake-iceberg-pipeline/services/data-cleaning-agent/datagrunt_agent/: __init__.py  agent.py
biglake-iceberg-pipeline/services/data-cleaning-agent/tests/: conftest.py  test_cleaning.py  test_core.py  test_header_detection.py  test_ingestion.py  test_quality.py  (+1 more)
services/loader/: Dockerfile  bigquery_manager.py  cleanup.py  main.py  pyproject.toml  requirements.txt
services/logger/: Dockerfile  pyproject.toml  requirements.txt
vector-matching-rrf-pipeline/: .gitignore  README.md  pyproject.toml  test.py
vector-matching-rrf-pipeline/data/: raw_customer_parts.csv  raw_source1_parts.csv  raw_source2_parts.csv  raw_source3_parts.csv  raw_source4_parts.csv  truth_table.csv
vector-matching-rrf-pipeline/dev/: generate_fake_data.py
vector-matching-rrf-pipeline/docs/: README.md  fake-data-prompt.md  open_source_review_report.md  parameter_tuning_guide.md  ui.md
vector-matching-rrf-pipeline/docs/plans/: 2026-03-12-remove-gemini-skill-conflicts-plan.md  2026-03-12-remove-gemini-skill-conflicts.md
vector-matching-rrf-pipeline/go-agent/: .env.example  agent_prompt.txt  go.mod  go.sum  main.go
vector-matching-rrf-pipeline/pipeline/: run.py
vector-matching-rrf-pipeline/pipeline/config/: customer_schema.json  prompt.txt
vector-matching-rrf-pipeline/pipeline/data/: truth_table.csv
vector-matching-rrf-pipeline/ui/: README.md  check_icons.js  index.html  main.py  metadata.json  package-lock.json  package.json  server.ts  test_lucide.js
vector-matching-rrf-pipeline/ui/sql/: get_agent_decision.sql  get_decision_by_id.sql  get_decisions_all.sql  get_decisions_auto_approved.sql  get_decisions_by_customer.sql  get_decisions_pending.sql  get_decisions_reviewed.sql  get_human_decision.sql  undo_decision_tx.sql  update_decision_tx_human_reviewed.sql  update_decision_tx_pending.sql
vector-matching-rrf-pipeline/ui/src/: App.tsx  api.ts  types.ts
vector-matching-rrf-pipeline/ui/static/: app.js  index.html  style.css
(+268 files in other folders)
