[project]
name = "industrial-parts-matching"
version = "0.1.0"
description = "A hybrid AI pipeline for matching industrial parts catalogs using BigQuery ML and autonomous reasoning agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.40.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
]
