[project]
name = "pipeline-logger"
version = "0.1.0"
description = "Pipeline event logger service."
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=22.0.0",
    "google-cloud-firestore>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
